# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.chef  README.md  spec.yaml  vercel-build.sh  vercel.json
.github/workflows/: general.yml  scheduled-audit.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230705140722_make_status_not_null_in_subscriptions.sql  20230705141702_create_subscription_tokens_table.sql  20230930041659_seed_user.sql  20231017113425_relax_null_checks_on_idempotency.sql  {timestamp}_create_subscriptions_table.sql
scripts/: init_db.ps1  init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
