[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Gustavo Barrios <gustavoantonio51@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "^0.9.0"
log = "^0.4.17"
serde = { version = "^1.0.143", features = ["derive"] }
config = { version= "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.22"
sqlx = { version = "0.6.1", default-features = false, features = ["runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "migrate"]}

[dev-dependencies]
reqwest = "0.11.11"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name use the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in our project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"
