[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Gustavo Barrios <gustavoantonio51@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "^1.0.143", features = ["derive"] }
config = { version= "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
serde-aux = "4.2.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7.5"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1"
validator = "0.16.0"
reqwest = { version = "0.11.13", default-features = false, features = [ "json", "rustls-tls" ] }
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
base64 = "0.21.2"
sha3 = "0.10.8"
argon2 = { version = "0.5.1", features = ["std"] }

[dependencies.sqlx]
version = "0.6.1"
default-features = false
features = [
  "runtime-actix-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.9.0"
claims = "0.7.0"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name use the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in our project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"
